# lexalyzer

./: .flake8  .gitignore  DEVEL.md  README.md  keys.py.sample  main.py  pyproject.toml  requirements.txt  test_main.py  🧪
