[tool.poetry]
name = "LexAlyzer"
version = "0.1.0"
description = "Analyzes podcasts, writes out how many voices are detected and the percentage of talk time."
authors = ["Steve Clement <steve@localhost.lu>"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "lex_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.22.2"
yt-dlp = "^2023.12.30"
pyaudioanalysis = {git = "git@github.com:tyiannak/pyAudioAnalysis.git"}
google-api-python-client = "^2.120.0"
isodate = "^0.6.1"
my-voice-analysis = {git = "git@github.com:Shahabks/my-voice-analysis.git"}
setuptools = "^69.1.1"
pydub = "^0.25.1"
librosa = "^0.10.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
hmmlearn = "^0.3.2"
simplejson = "^3.19.2"
eyed3 = "^0.9.7"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
